[fix]: page height, grid gap

--- a/css/index.css
+++ b/css/index.css
@@ -19,11 +19,12 @@ body{
     width: 84%;
     margin: auto;
     padding: 30px 0 10px 0;
+    max-width: 1200px;
 }
 
 .header{
     background-color: #D14C4F;
-    height: 70px;
+    height: 60px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -33,7 +34,7 @@ body{
     font-size: 1.2rem;
     font-weight: 700;
     color: #F4F5ED;
-    line-height: 70px;
+    line-height: 60px;
     letter-spacing: 1px;
 }
 
@@ -132,25 +133,25 @@ body{
 
 .good,.bad{
     text-align: center;
-    padding: 2px 8px;
     display: flex;
     justify-content: space-between;
 }
 
 .good{
-    line-height: 60px;
+    padding: 5px 10px;
+    line-height: 40px;
     background-color: #D14C4F;
     border-radius: 50px;
     color: #F4F5ED;
-    font-size: 28px;
+    font-size: 26px;
     grid-area: good;
     padding-right: 20px;
     
 }
 
 .bad{
-    font-size: 20px;
     padding: 5px 10px;
+    font-size: 18px;
     grid-area: bad;
     align-self: center;
 }
@@ -210,14 +211,15 @@ body{
 
 .mainContent{
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    /* grid-template-columns: repeat(3,1fr); */
+    grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: auto;
     grid-template-areas: "subtitle subtitle subtitle"
                          "month    data data"
                          "region data data"
                          ".     date ."
-                         "good     good good"
-                         "bad      bad  bad";
+                         "good    good good"
+                         ".       bad   .";
     grid-row-gap: 20px;
 }
 
@@ -244,7 +246,6 @@ body{
     .regionMenu{
         grid-template-columns: repeat(5,1fr);
         opacity: 1;
-        margin-top:20px;
         position:static;
         background-color: #F4F5ED;
         border-top: 3px solid #3d3d3d;
@@ -255,7 +256,6 @@ body{
     .regionMenu.active{
         grid-template-columns: repeat(5,1fr);
         opacity: 1;
-        margin-top:30px;
         position:static;
         background-color: #F4F5ED;
         border-top: 3px solid #3d3d3d;
@@ -274,6 +274,17 @@ body{
         color:#D14C4F;
     }
     .weatherDataBlock{
-        margin-left: 40px;
+        margin-left: 80px;
+    }
+    .good{
+        padding: 3px 20px;
+    }
+    .bad{
+        padding: 5px 0px;
+    }
+    .goTmrBtn{
+        position: fixed;
+        bottom: 0;
+        right: 0;
     }
 }
